Fix Annoying Scrollbar From Appearing on Main View
We didn't set the `pref-width` correctly; need to minus 5px to account for scrollbar prevention.

--- a/src/main/resources/site/overwrite/auditranscribe/views/css/base.css
+++ b/src/main/resources/site/overwrite/auditranscribe/views/css/base.css
@@ -35,19 +35,19 @@
 }
 
 .project-name-label {
-    -fx-pref-width: 375px;
+    -fx-pref-width: 370px;
     -fx-max-width: 375px;
     -fx-text-alignment: left;
 }
 
 .last-opened-date-label {
-    -fx-pref-width: 225px;
+    -fx-pref-width: 220px;
     -fx-max-width: 225px;
     -fx-text-alignment: right;
 }
 
 .filepath-label {
-    -fx-pref-width: 600px;
+    -fx-pref-width: 595px;
     -fx-max-width: 600px;
 }
 
